fixed header and footer issue and started light/dark mode code

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -31,13 +31,13 @@ header {
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 15px;
+    margin: 0 10px 0;
+    padding: 10px;
     background-color: var(--sky);
     text-align: center;
 }
 
 main {
-    flex: 1 0 auto;
     width: 100%;
     display: flex;
     flex-flow: column;
@@ -62,8 +62,7 @@ footer {
     line-height: 1.5;
     text-align: center;
     width: 100%;
-    padding: 20px;
-    flex-shrink: 0;
+    padding: 10px;
     background-color: var(--sky);
 }
 
