--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -3,6 +3,9 @@
     --watermelon: #FF3B3F;
     --carbon: #A9A9A9;
     --sky: #CAEBF2;
+    --darkgrey: #121212;
+    --white: #F5F5F5;
+    --darkpurple: #301934;
 }
 
 * {
@@ -27,13 +30,19 @@ body {
 
 header {
     position: relative;
-    font-size: 100%;
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 25px;
     background-color: var(--sky);
     text-align: center;
+}
+
+header.light-mode {
+    background-color: var(--sky);
+}
+
+header.dark-mode {
+    background-color: var(--darkpurple);
 }
 
 main {
@@ -51,7 +60,7 @@ form {
 
 form section {
     margin: 5px;
-    padding: 5px;
+    padding: 5px; 
 }
 
 footer {
@@ -60,9 +69,14 @@ footer {
     line-height: 1.5;
     text-align: center;
     width: 100%;
-    padding: 25px;
-    flex-shrink: 0;
+}
+
+footer.light-mode {
     background-color: var(--sky);
+}
+
+footer.dark-mode {
+    background-color: var(--darkpurple);
 }
 
 a {
@@ -70,10 +84,92 @@ a {
     color: var(--watermelon)
 }
 
+.light-mode {
+    background-color: var(--neutral);
+    color: var(--carbon);
+}
+
+.dark-mode {
+    background-color: var(--darkgrey);
+    color: var(--white);
+}
+
+.div-switch {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+  }
+
 .border {
     border: 2px solid var(--watermelon);
     width: 100%;
-    position: absolute;
+}
+
+.wrapper {
+    display: flex;
+    min-height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #blog-heading {
@@ -81,13 +177,13 @@ a {
     text-align: center;
 }
 
-#full-name-section {
+/* #full-name-section {
     flex: 0 0 45%;
 }
 
 #title-section {
     flex: 0 0 45%;
-}
+} */
 
 #blog-post-section {
     flex: 0 0 100%;
